# nimbus

./: .gitignore  README.md  setup.cfg  setup.py
data/interim/hla_fingerprints/: hla_af_patch_emb_netMHCpan_pseudoseq_res_scaled0-1.npy  (+1 more)
data/raw/: README.md
nimbus/: globals.py  train_pHLA_binding_predictor.py  train_pHLA_pseudoseq_binding_predictor.py
nimbus/data_processing/: __init__.py  phla_dataset.py  phla_pseudoseq_dataset.py  seq_tokenizer.py
nimbus/ml_blocks/: __init__.py  bidirectional_cross_attention_block.py  cross_attention_block.py  feed_forward_block.py  filip_block.py  joint_cross_attention_block.py  self_attention_block.py
nimbus/predictors/: __init__.py  pHLA_binding_predictor.py  pHLA_pseudoseq_binding_predictor.py
nimbus/utils/: __init__.py  cosine_warmup_scheduler.py  data_processing_utils.py  logger_factory.py
notebooks/: 1.0-amdr-get-unique-hlas.ipynb  2.0-amdr-exploring-peptide-encoding.ipynb  2.0-amdr-preparation-pHLA-binding-data.ipynb  2.1-amdr-data-exploration-of-hla-fingerprints.ipynb  2.2-amdr-prepare-immunogenicity-data.ipynb  2.3-amdr-get-random-proteome-peptides.ipynb  3-amdr-preparation-pHLA-binding-data.ipynb  3.0-amdr-preparation-pHLA-binding-data.ipynb  3.1-amdr-join-peptide-hla-data.ipynb  3a.0-amdr-first-pHLAbinding-model.ipynb  3b.0-amdr-model-with-attention-mechanism.ipynb  4.0-amdr-analyse-baselines-performance-on-testset.ipynb  4.0-amdr-analyse-netmhcpan-performance-on-testset.ipynb  4.0-amdr-first-pHLAbinding-model.ipynb  4.1-amdr-model-evaluation-on-test-set.ipynb  4.2-amdr-exploring-pHLApredictor-latent-space.ipynb
(+28 files in other folders)
