[metadata]
name = nimbus
version = 0.0.1
author = Anna M. Diaz-Rovira
author_email = annadiarov@gmail.com
description = NIMBUS: Neoantigen Immunogenicity Multimodal Prediction Utilizing Surface-informed Fingerprints
keywords = cancer vaccines, neoantigens, immunogenicity, machine learning
url = https://github.com/annadiarov/nimbus